# scaling-book

./: .gitignore  pyproject.toml
scaling_book/: ch10.ipynb  ch9_1.ipynb  ch9_2.ipynb
scripts/: launch_tpu.py
test/: test_model.py
tiny/: FLOPS.md  data.py  model.py  train.py
tiny/config/: approach_1.yaml  approach_2.yaml  config.yaml
tiny/config/model/: 102k.yaml  106k.yaml  114k.yaml  132k.yaml  152k.yaml  158k.yaml  184k.yaml  189k.yaml  19k.yaml  1_00m.yaml  1_13m.yaml  1_19m.yaml  1_25m.yaml  1_34m.yaml  1_42m.yaml  1_49m.yaml  1_57m.yaml  1_62m.yaml  1_75m.yaml  1_86m.yaml  206k.yaml  227k.yaml  257k.yaml  29k.yaml  2_03m.yaml  2_12m.yaml  2_23m.yaml  2_38m.yaml  2_56m.yaml  2_79m.yaml  2_97m.yaml  301k.yaml  302k.yaml  334k.yaml  33k.yaml  359k.yaml  35k.yaml  39k.yaml  3_14m.yaml  401k.yaml  (+17 more)
