[project]
name = "tiny"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "einops>=0.8.2",
    "flax>=0.12.7",
 "jax>=0.10.2",
 "optax>=0.2.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tiny"]

[dependency-groups]
dev = ["ruff>=0.15.20"]

[tool.ruff]
line-length = 100
